--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<html lang="en">
-	<head>
-	</head>
-	<body>
+<html lang="en"></html>
+    <head>
+        <title>Static website hosting with GitHub Pages and Cloudflare DNS</title>
+        <style>
+            .hl {
+                color: #F00;
+            }
+        </style>
+    </head>
+    <body>
 
 <pre>
-A modern .plan
-==============
+<a href="/">Harri Mähönen</a> <span class="hl">#</span> a .plan for software engineer
+
+
+
+<strong>ABOUT</strong>
+
+Hello and welcome. I am a software engineer and I try to work on interesting
+things. I also try to write once in a while about technical matters that
+interest me.
+
+I have a <a href="https://www.linkedin.com/in/harrimahonen/">LinkedIn</a> profile. You can also contact me via email: <em>harri(at)mahonen.org</em>
+
+
+<strong>RECENT</strong>
+
+November 9th, 2021
+- <a href="static-website-hosting-with-github-pages-and-cloudflare.html">Static website hosting with GitHub Pages and Cloudflare DNS</a>
+
+
 </pre>
 
-	</body>
+    </body>
 </html>
