Fix index title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"></html>
     <head>
-        <title>Static website hosting with GitHub Pages and Cloudflare DNS</title>
+	    <title>A .plan by Harri Mähönen</title>
         <style>
             .hl {
                 color: #F00;
